# cargonetes

./: Cargo.toml  flake.nix
src/: main.rs  utils.rs
src/manager/: mod.rs
src/node/: mod.rs
src/scheduler/: mod.rs
src/task/: mod.rs
src/worker/: mod.rs
